--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
-    line-gap-override: 10;
+    /* line-gap-override: 10; */
     font-weight: 400;
     font-size: large;
     text-align: justify;
@@ -9,10 +9,10 @@
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.8);
     background-color: black;
-    /* height: 100svh;
-    width: 100svw; */
-    overflow-y: hidden;
-    overflow-x: hidden;
+    height: 100svh;
+    width: 100svw;
+    /* overflow: clip; */
+    overflow: hidden;
     scrollbar-width: none;
 
     font-synthesis: none;
@@ -27,6 +27,7 @@
 body {
     height: 100svh;
     width: 100svw;
+    margin: 0;
 }
 
 .root {
@@ -61,6 +62,7 @@ body {
 
 .book-page {
     margin: 0;
+    /* top: 0px; */
     padding: calc(var(--y-padding) * 0.3) var(--x-padding)
         calc(var(--y-padding) * 0.7);
     height: calc(100svh - var(--y-padding));
@@ -80,6 +82,9 @@ body {
         column-count: 2;
         -moz-column-count: 2;
         -webkit-column-count: 2;
+    }
+    .book-page img {
+        max-width: calc(100svw - 2 * var(--x-padding)) !important;
     }
 }
 
@@ -101,6 +106,7 @@ body {
     padding-right: auto;
     margin-bottom: 50px;
     border-radius: 20px;
+    max-width: calc(100svw - 2 * var(--x-padding)) !important;
     max-height: calc(100svh - var(--y-padding)) !important;
 }
 
