--- a/src/components/LoadingScreen/LoadingScreen.module.css
+++ b/src/components/LoadingScreen/LoadingScreen.module.css
@@ -6,7 +6,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    opacity: 100%;
+    transition: opacity 1s ease-in-out;
 }
 
 .loading-screen-gon {
+    height: 100svh;
+    width: 100svw;
+    position: absolute;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0%;
+    transition: opacity 1s ease-in-out;
+    pointer-events: none;
 }
