Changed the LoadingScreen so it fades away with animation, gave the setIsLoading to the book function so that it can decide when to turn it off and on. Made it go true when it needs to calculate the number of pages when the window is resized and so forth. Also did some refactoring in the Book component, preparing to make some new hooks.

--- a/src/index.css
+++ b/src/index.css
@@ -89,9 +89,14 @@ parsererror {
         column-count: 2;
         -moz-column-count: 2;
         -webkit-column-count: 2;
+
+        column-width: calc(50svw - 2 * var(--x-padding));
+        -webkit-column-width: calc(50svw - 2 * var(--x-padding));
     }
-    .book-page img {
-        max-width: calc(100svw - 2 * var(--x-padding)) !important;
+
+    .book-page img,
+    svg {
+        max-width: calc(50svw - 2 * var(--x-padding)) !important;
     }
 }
 
@@ -106,12 +111,16 @@ parsererror {
         column-width: calc(100svw - 2 * var(--x-padding));
         -webkit-column-width: calc(100svw - 2 * var(--x-padding));
     }
+
+    .book-page img,
+    svg {
+        max-width: calc(100svw - 2 * var(--x-padding)) !important;
+    }
 }
 
 .book-page img,
 svg {
     border-radius: 20px;
-    max-width: calc(100svw - 2 * var(--x-padding)) !important;
     max-height: calc(100svh - var(--y-padding)) !important;
 }
 
