--- a/src/components/LoadingScreen/LoadingScreen.module.css
+++ b/src/components/LoadingScreen/LoadingScreen.module.css
@@ -7,18 +7,19 @@
     align-items: center;
     justify-content: center;
     opacity: 100%;
-    transition: opacity 1s ease-in-out;
+    z-index: 9999;
+    /* transition: opacity 3s ease-in-out; */
 }
 
 .loading-screen-gon {
     height: 100svh;
     width: 100svw;
     position: absolute;
-    background-color: black;
+    background-color: rgb(0, 0, 0, 0);
     display: flex;
     align-items: center;
     justify-content: center;
     opacity: 0%;
-    transition: opacity 1s ease-in-out;
+    transition: opacity 0.6s ease-in-out, background-color 0.6s ease-in-out;
     pointer-events: none;
 }
