--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,9 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
-    --side-margin: 30px;
-    --top-margin: 30px;
-    --bottom-margin: 70px;
+    --side-padding: 30px;
+    --top-padding: 30px;
+    --bottom-padding: 70px;
 
     --font-size: 1em;
 }
@@ -72,51 +72,51 @@ parsererror {
 
 .book-page {
     margin: 0;
-    padding: var(--top-margin) var(--side-margin) var(--bottom-margin);
-    height: calc(100svh - calc(var(--top-margin) + var(--bottom-margin)));
+    padding: var(--top-padding) var(--side-padding) var(--bottom-padding);
+    height: calc(100svh - calc(var(--top-padding) + var(--bottom-padding)));
     text-shadow: 2px 2px 5px rgba(0, 0, 0);
     font-size: var(--font-size);
 
-    column-gap: calc(2 * var(--side-margin));
+    column-gap: calc(2 * var(--side-padding));
     column-fill: balance;
     position: relative;
     overflow: hidden hidden;
-    -moz-column-gap: calc(2 * var(--side-margin));
-    -webkit-column-gap: calc(2 * var(--side-margin));
+    -moz-column-gap: calc(2 * var(--side-padding));
+    -webkit-column-gap: calc(2 * var(--side-padding));
 }
 
 @media screen and (orientation: landscape) {
     .book-page {
-        width: calc(100svw - 2 * var(--side-margin));
+        width: calc(100svw - 2 * var(--side-padding));
         column-count: 2;
         -moz-column-count: 2;
         -webkit-column-count: 2;
 
-        column-width: calc(50svw - 2 * var(--side-margin));
-        -webkit-column-width: calc(50svw - 2 * var(--side-margin));
+        column-width: calc(50svw - 2 * var(--side-padding));
+        -webkit-column-width: calc(50svw - 2 * var(--side-padding));
     }
 
     .book-page img,
     svg {
-        max-width: calc(50svw - 2 * var(--side-margin)) !important;
+        max-width: calc(50svw - 2 * var(--side-padding)) !important;
     }
 }
 
 @media screen and (orientation: portrait) {
     .book-page {
-        width: calc(100svw - 2 * var(--side-margin));
+        width: calc(100svw - 2 * var(--side-padding));
         column-count: 1;
         -moz-column-count: 1;
         -webkit-column-count: 1;
 
         /* without this safari does not play nice, creating only one column, period */
-        column-width: calc(100svw - 2 * var(--side-margin));
-        -webkit-column-width: calc(100svw - 2 * var(--side-margin));
+        column-width: calc(100svw - 2 * var(--side-padding));
+        -webkit-column-width: calc(100svw - 2 * var(--side-padding));
     }
 
     .book-page img,
     svg {
-        max-width: calc(100svw - 2 * var(--side-margin)) !important;
+        max-width: calc(100svw - 2 * var(--side-padding)) !important;
     }
 }
 
@@ -124,7 +124,7 @@ parsererror {
 svg {
     border-radius: 20px;
     max-height: calc(
-        100svh - (var(--top-margin) + var(--bottom-margin))
+        100svh - (var(--top-padding) + var(--bottom-padding))
     ) !important;
 }
 
@@ -159,4 +159,14 @@ svg > image {
     font-size: 13px;
     color: gray;
     transition: all 0.3s ease-in-out;
+}
+
+.bottom-click-area {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 10%;
+    z-index: 1000;
+    background-color: transparent;
 }
