--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
     line-height: 1.5;
     /* line-gap-override: 10; */
     font-weight: 400;
-    font-size: large;
     text-align: justify;
+    transform: scale(--font-size)
 
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.8);
@@ -24,7 +24,7 @@
     --top-padding: 30px;
     --bottom-padding: 70px;
 
-    --font-size: 1em;
+    --font-size: 1.2;
 }
 
 body {
