--- a/src/components/LoadingScreen/LoadingScreen.module.css
+++ b/src/components/LoadingScreen/LoadingScreen.module.css
@@ -1,25 +1,31 @@
 .loading-screen {
-    height: 100svh;
-    width: 100svw;
+    height: 100%;
+    width: 100%;
     position: absolute;
+    top: 0;
+    left: 0;
     background-color: black;
     display: flex;
     align-items: center;
     justify-content: center;
     opacity: 100%;
     z-index: 9999;
-    /* transition: opacity 3s ease-in-out; */
+    transition:
+        opacity 0.2s ease-in-out,
+        background-color 0.2s ease-in-out;
 }
 
 .loading-screen-gon {
-    height: 100svh;
-    width: 100svw;
+    height: 100%;
+    width: 100%;
     position: absolute;
     background-color: rgb(0, 0, 0, 0);
     display: flex;
     align-items: center;
     justify-content: center;
     opacity: 0%;
-    transition: opacity 0.6s ease-in-out, background-color 0.6s ease-in-out;
+    transition:
+        opacity 0.4s ease-in-out,
+        background-color 0.4s ease-in-out;
     pointer-events: none;
 }
