--- a/src/components/OptionsMenu/OptionsMenu.css
+++ b/src/components/OptionsMenu/OptionsMenu.css
@@ -4,27 +4,27 @@
     left: 0;
     width: 100%;
     height: 100%;
-    backdrop-filter: blur(8px); /* End state */
+    backdrop-filter: blur(8px);
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 9999;
-    opacity: 1; /* End state */
+    opacity: 1;
     container-type: size;
     container-name: options-overlay;
     transition:
         opacity 0.3s ease-out,
-        backdrop-filter 0.3s ease-out; /* Added backdrop-filter */
+        backdrop-filter 0.3s ease-out;
     overflow: hidden;
 }
 
 .options-menu-overlay.fade-out {
-    opacity: 0; /* Start state for fade-out */
-    backdrop-filter: blur(0px); /* Start state for blur fade-out */
+    opacity: 0;
+    backdrop-filter: blur(0px);
 }
 
 .options-menu {
     position: absolute;
     bottom: 0;
-    left: 0;
+    left: 50%;
     width: 100%;
     max-width: 500px;
     background: #1e1e1e;
@@ -35,35 +35,16 @@
     color: #fff;
     max-height: 50%;
     overflow-y: auto;
-    transform: translateY(100%);
+    transform: translateX(-50%) translateY(100%);
     transition: transform 0.3s ease-out;
 }
 
-@container options-overlay (aspect-ratio &gt; 1/1) {
-    .options-menu {
-        left: 50%;
-        width: auto;
-        transform: translateX(-50%) translateY(100%);
-    }
-}
-
 .options-menu.visible {
-    transform: translateY(0);
-}
-
-@container options-overlay (aspect-ratio &gt; 1/1) {
-    .options-menu.visible {
-        transform: translateX(-50%) translateY(0);
-    }
+    transform: translateX(-50%) translateY(0);
 }
 
 .options-menu.slide-down {
-    transform: translateY(100%);
-}
-@container options-overlay (aspect-ratio &gt; 1/1) {
-    .options-menu.slide-down {
-        transform: translateX(-50%) translateY(100%);
-    }
+    transform: translateX(-50%) translateY(100%);
 }
 
 .close-button {
@@ -132,7 +113,7 @@
     outline: none;
 }
 
-.font-family-buttons select :hover {
+.font-family-buttons select:hover {
     background-color: #444;
 }
 
