--- a/src/components/OptionsMenu/OptionsMenu.css
+++ b/src/components/OptionsMenu/OptionsMenu.css
@@ -10,9 +10,7 @@
     opacity: 1;
     container-type: size;
     container-name: options-overlay;
-    transition:
-        opacity 0.3s ease-out,
-        backdrop-filter 0.3s ease-out;
+    transition: opacity 0.3s ease-out, backdrop-filter 0.3s ease-out;
     overflow: hidden;
 }
 
@@ -33,7 +31,7 @@
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     color: #fff;
-    max-height: 50%;
+    max-height: max(300px, 50%);
     overflow-y: auto;
     transform: translateX(-50%) translateY(100%);
     transition: transform 0.3s ease-out;
@@ -130,9 +128,7 @@
 
 .option-value {
     font-weight: bold;
-    transition:
-        transform 0.3s ease-out,
-        opacity 0.3s ease-out;
+    transition: transform 0.3s ease-out, opacity 0.3s ease-out;
     opacity: 1;
     transform: scale(1);
 }
